--- a/notes/_quarto.yml
+++ b/notes/_quarto.yml
@@ -9,6 +9,7 @@ website:
     style: docked
     search: true
     contents:
+    - about.qmd
     - index.qmd
     - section: "Background"
       contents:
