--- a/slides/_quarto.yml
+++ b/slides/_quarto.yml
@@ -2,11 +2,12 @@ project:
   type: website
   output-dir: ../docs/slides
   render:
-    - "background/background.qmd"
-    - "pds-intro/pds-intro.qmd"
-    - "adjectives/adjectives.qmd"
-    - "factivity/factivity.qmd"
-    - "qud/qud.qmd"
+    # - "background/theory-to-data.qmd"
+    - "background/rsa.qmd"
+    # - "pds-intro/pds-intro.qmd"
+    # - "adjectives/adjectives.qmd"
+    # - "factivity/factivity.qmd"
+    # - "qud/qud.qmd"
  
 format:
   revealjs:
