--- a/slides/_quarto.yml
+++ b/slides/_quarto.yml
@@ -2,10 +2,10 @@ project:
   type: website
   output-dir: ../docs/slides
   render:
-    - "background/background.qmd"
+    # - "background/background.qmd"
     # - "background/rsa.qmd"
     # - "pds-intro/pds-intro.qmd"
-    # - "adjectives/adjectives.qmd"
+    - "adjectives/pds-to-stan.qmd"
     # - "factivity/factivity.qmd"
     # - "qud/qud.qmd"
  
