Converts to PNG and updates slides.

--- a/slides/_quarto.yml
+++ b/slides/_quarto.yml
@@ -6,8 +6,8 @@ project:
     # - "background/rsa.qmd"
     # - "pds-intro/pds-intro.qmd"
     # - "adjectives/adjectives-intro.qmd"
-    - "adjectives/gradable-adjectives.qmd"
-    # - "factivity/factivity.qmd"
+    # - "adjectives/gradable-adjectives.qmd"
+    - "factivity/factivity.qmd"
     # - "qud/qud.qmd"
  
 format:
