--- a/notes/_quarto.yml
+++ b/notes/_quarto.yml
@@ -37,7 +37,13 @@ website:
       - adjectives/modeling-vagueness.qmd
     - section: "Factivity inferences"
       contents:
-      - factivity/factivity.qmd
+      - factivity/factivity-projection.qmd
+      - factivity/important-distinction.qmd
+      - factivity/hypotheses.qmd
+      - factivity/experimental-paradigms.qmd
+      - factivity/additional-models.qmd
+      - factivity/additional-dimensions.qmd
+      - factivity/challenges-solutions.qmd
     - section: "Modeling the question prompt"
       contents:
       - qud/qud.qmd
